--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+      
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -20,10 +21,14 @@
       "supportsTablet": true
     },
     "android": {
+      
+      "softwareKeyboardLayoutMode" : "pan",
+      
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
+      
     },
     "web": {
       "favicon": "./assets/favicon.png"
